Fixing bug 406671. Speed up nsWindowSH::GetProperty(). r+sr=peterv@propagandism.org, a=jonas@sicking.cc